# spiritual-text-work

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: media-config.properties
scripts/: __init__.py  azure_transcribe.py  md_to_docx.py  md_to_pdf.py  pdf_to_docx.py  run_batch.ps1  translate_markdown.py  translate_markdown_to_hindi.py  translate_markdown_to_telugu.py  vlc_playlist_to_m4a.py  yt_caption_extract.py  yt_download_audio.py  yt_transcribe.py
